Resolve some pmd warnings